--- a/packages/websites/coffeekraken-io/src/css/sugar.css
+++ b/packages/websites/coffeekraken-io/src/css/sugar.css
@@ -49,6 +49,7 @@
   fs:src/icons/coffeekraken/file/file-php.svg
   fs:src/icons/coffeekraken/file/file-html.svg
   fs:src/icons/coffeekraken/file/file-md.svg
+  fs:src/icons/coffeekraken/ui/button.svg
   fs:src/icons/coffeekraken/brand/brand-lit.svg
   fs:src/icons/coffeekraken/brand/brand-coffeekraken.svg
   fs:src/icons/coffeekraken/fs/folder.svg
