--- a/packages/websites/coffeekraken-io/src/views/pages/homepage/welcome/welcome.css
+++ b/packages/websites/coffeekraken-io/src/views/pages/homepage/welcome/welcome.css
@@ -14,6 +14,17 @@
         ) !important;
     }
 
+    &:before {
+        content: '';
+        position: absolute;
+        top: 0; left: 0;
+        width: 100%; height: 68%;
+        background: linear-gradient(90deg, sugar.color(main, --alpha 0.06), sugar.color(main, --alpha 0));
+        border-radius: 50%;
+        transform-origin: 50% 100%;
+        transform: scaleX(2) scaleY(2);
+    }
+
     .__illustration {
         position: absolute;
         width: 1280px;
