--- a/packages/websites/coffeekraken-io/src/css/sugar.css
+++ b/packages/websites/coffeekraken-io/src/css/sugar.css
@@ -13,6 +13,7 @@
   fab:css3-alt:css
   fa:box-open:box
   fa:info:info
+  fa:times-circle:close
   fa:chalkboard-teacher:example
   fa:list-ul:list-ul
   fa:cogs:setting
