--- a/packages/websites/coffeekraken-io/src/views/layouts/main.css
+++ b/packages/websites/coffeekraken-io/src/views/layouts/main.css
@@ -34,6 +34,7 @@
 }
 
 .bg {
+    display: none;
     width: 100%;
     height: 100%;
     position: fixed;
@@ -44,7 +45,7 @@
     transition: opacity 0.6s ease-out;
 
     @sugar.theme.when (dark) {
-        opacity: 0.05;
+        opacity: 0.15;
     }
 
     &:after {
