--- a/packages/websites/coffeekraken-io/src/css/sugar.css
+++ b/packages/websites/coffeekraken-io/src/css/sugar.css
@@ -52,6 +52,13 @@
   fs:src/icons/coffeekraken/file/file-md.svg
   fs:src/icons/coffeekraken/ui/button.svg
   fs:src/icons/coffeekraken/ui/theme.svg
+  fs:src/icons/coffeekraken/ui/dropdown.svg
+  fs:src/icons/coffeekraken/ui/tooltip.svg
+  fs:src/icons/coffeekraken/ui/switch.svg
+  fs:src/icons/coffeekraken/ui/avatar.svg
+  fs:src/icons/coffeekraken/helpers/typography.svg
+  fs:src/icons/coffeekraken/helpers/align.svg
+  fs:src/icons/coffeekraken/helpers/colors.svg
   fs:src/icons/coffeekraken/brand/brand-lit.svg
   fs:src/icons/coffeekraken/brand/brand-coffeekraken.svg
   fs:src/icons/coffeekraken/fs/folder.svg
