--- a/packages/websites/coffeekraken-io/src/css/sugar.css
+++ b/packages/websites/coffeekraken-io/src/css/sugar.css
@@ -59,8 +59,16 @@
   fs:src/icons/coffeekraken/helpers/typography.svg
   fs:src/icons/coffeekraken/helpers/align.svg
   fs:src/icons/coffeekraken/helpers/colors.svg
+  fs:src/icons/coffeekraken/helpers/flex.svg
+  fs:src/icons/coffeekraken/helpers/ratio.svg
+  fs:src/icons/coffeekraken/helpers/radius.svg
+  fs:src/icons/coffeekraken/helpers/easing.svg
+  fs:src/icons/coffeekraken/helpers/space.svg
+  fs:src/icons/coffeekraken/helpers/visibility.svg
+  fs:src/icons/coffeekraken/helpers/scale.svg
   fs:src/icons/coffeekraken/brand/brand-lit.svg
   fs:src/icons/coffeekraken/brand/brand-coffeekraken.svg
+  fs:src/icons/coffeekraken/brand/opensource.svg
   fs:src/icons/coffeekraken/fs/folder.svg
   fs:src/icons/coffeekraken/tools/helpers.svg
   fs:src/icons/coffeekraken/html/autocomplete.svg
