--- a/packages/websites/coffeekraken-io/src/css/sugar.css
+++ b/packages/websites/coffeekraken-io/src/css/sugar.css
@@ -18,6 +18,7 @@
   fa:list-ul:list-ul
   fa:cogs:setting
   fa:th:return
+  fa:link:link
   fa:search:search
   fa:radiation:nothing
   fa:download:import
