--- a/packages/websites/coffeekraken-io/src/css/sugar.css
+++ b/packages/websites/coffeekraken-io/src/css/sugar.css
@@ -11,7 +11,9 @@
   fa:fire:fire
   fa:eye:preview
   fab:css3-alt:css
+  fa:calendar-alt:calendar
   fa:box-open:box
+  fa:palette:color
   fa:info:info
   fa:times-circle:close
   fa:chalkboard-teacher:example
