--- a/packages/websites/coffeekraken-io/src/views/pages/homepage/features/features.css
+++ b/packages/websites/coffeekraken-io/src/views/pages/homepage/features/features.css
@@ -62,14 +62,14 @@
         @sugar.layout (
       1 2 3 4
       5 6 7 8
-    , $gutter: 20, $gutterBetween: true);
+    , $gap: 20, $gapBetween: true);
     }
 
     .__webcomponents-grid {
         @sugar.layout (
       1 2 3 4 5
       6 7 8 9 10
-    , $gutter: 20, $gutterBetween: true);
+    , $gap: 20, $gapBetween: true);
     }
 
     #features-development,
