--- a/packages/websites/coffeekraken-io/src/views/pages/homepage/welcome/welcome.css
+++ b/packages/websites/coffeekraken-io/src/views/pages/homepage/welcome/welcome.css
@@ -30,26 +30,27 @@
         width: 1280px;
         height: 720px;
         z-index: 10;
-        top: 100px;
+        top: 50vh;
         left: calc(50% - 250px);
-        transform: scale(1);
+        transform: scale(1) translateY(-50%);
 
-        /* filter: brightness(120%); */
+        @sugar.media mobile {
+            position: relative;
+            top: 100px; left: 0;
+            width: 100%; height: 350px;
+            transform: scale(1.4);
+            text-align: center;
+        }
+
+        ck-blob {
+            display: block;
+        }
 
         .__loader {
             position: absolute;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-        }
-
-        > * {
-            position: absolute;
-            /* filter: drop-shadow(20px 20px 30px rgba(0, 0, 0, 0.07)); */
-
-            @sugar.theme.when dark {
-                /* filter: drop-shadow(20px 20px 30px rgba(81, 1, 255, 0.1)); */
-            }
         }
     }
 
@@ -60,5 +61,14 @@
         left: 50%;
         width: 1280px;
         transform: translate(-50%, -50%);
+
+        @sugar.media mobile {
+            position: relative;
+            top: 0; left: 0;
+            width: 100%;
+            transform: none;
+            text-align: center;
+            padding: sugar.padding(100) sugar.padding(30);
+        }
     }
 }
