--- a/packages/websites/coffeekraken-io/src/views/pages/homepage/welcome/welcome.css
+++ b/packages/websites/coffeekraken-io/src/views/pages/homepage/welcome/welcome.css
@@ -4,6 +4,7 @@
     position: relative;
     z-index: 10;
     margin-bottom: 50px;
+    background: red;
 
     @sugar.theme.when (dark) {
         background: sugar.color(main, background) !important;
