--- a/packages/websites/coffeekraken-io/src/css/sugar.css
+++ b/packages/websites/coffeekraken-io/src/css/sugar.css
@@ -1,7 +1,9 @@
 @sugar.init;
 @sugar.theme (dark, null, true);
 
-@sugar.classes;
+@sugar.media.classes('mobile,tablet') {
+  @sugar.classes;
+}
 
 @sugar.ui.filtrableinput.classes;
 @sugar.platform.classes;
@@ -95,5 +97,3 @@
   fs:src/icons/safari.svg:support-safari
   fs:src/icons/vuejs.svg:vue
 );
-
-@sugar.media.classes(mobile);
