--- a/packages/websites/coffeekraken-io/src/views/pages/homepage/features/features.css
+++ b/packages/websites/coffeekraken-io/src/views/pages/homepage/features/features.css
@@ -70,7 +70,19 @@
       1 2 3 4 5
       6 7 8 9 10
     , $gap: 20, $gapBetween: true);
+
+        @sugar.media mobile {
+            @sugar.layout (
+        1 2 
+        3 4
+        5 6
+        7 8
+        9 10
+        , $gap: 20, $gapBetween: true);
+        }
     }
+
+    
 
     #features-development,
     #features-webcomponents {
